cleaning findbug warning